# hermann-reesearch

./: .gitignore  README.md  config.yaml  docker-compose.yml  triton-server.proto
api/: Cargo.toml  build.rs
api/proto/: surface.proto
api/src/: README.md  main.rs  manager.rs  server.rs
api/src/handlers/: embedding.rs  insert.rs  mod.rs  retrieve.rs
api/src/model/: fatcat.rs  mod.rs
api/src/rank/: mod.rs
scripts/: download.py  insert.py  inspect_.py  merge.py  parse.py
scripts/protos/: surface_pb2.py  surface_pb2_grpc.py
